<resources>
    <string name="app_name">WalletAndroid</string>
    <string name="textview">TextView</string>
    <string name="appName" translatable="false">AlkeWallet</string>
    <string name="alkewallet" translatable="false">Alkewallet</string>
    <string name="banner_login_page1">Loguea y empeza a</string>
    <string name="banner_login_page2">transferir!</string>
    <string name="texto_cuadro_solicitud_email">Email</string>
    <string name="pista_cuadro_rellenar_email">Ingresa tu email</string>
    <string name="ingresa_tu_contrasenia">Ingresa tu contraseña</string>
    <string name="todo">TODO</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="login">Login</string>
    <string name="ya_tiene_cuenta">Ya tiene cuenta?</string>
    <string name="crear_cuenta_nueva">Crear cuenta nueva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse_y">Registrarse y</string>
    <string name="empezar_a_transferir">empezar a transferir</string>
    <string name="nombre">Nombre</string>
    <string name="ingresar_nombre">Ingresar nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingresar_apellido">Ingresar apellido</string>
    <string name="email">Email</string>
    <string name="ingresar_email">Ingresar Email</string>
    <string name="ingresar_contrase_a">Ingresar contraseña</string>
    <string name="reingresar_contrase_a">Reingresar contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="ingresar_dinero">ingresar Dinero</string>
    <string name="reem_khaled">Reem Khaled</string>
    <string name="reem_1993_gmail_com">reem_1993@gmail.com</string>
    <string name="cantidad_a_ingresa">Cantidad a ingresa</string>
    <string name="notas_de_transferencia">Notas de transferencia</string>
    <string name="agregar_notas_de_transferencia_opcional">Agregar notas de transferencia(opcional)</string>
    <string name="_20_00" translatable="false">20.00</string>
    <string name="_124_57" translatable="false">$124.57</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="profile_picture">profile</string>
    <string name="send_icon">send_icon</string>
    <string name="recepcion_icon">request_icon</string>
    <string name="inicio">Inicio</string>
    <string name="nombreusuario">nombreusuario!</string>
</resources>