<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF"
    android:scaleType="centerCrop"
    tools:context="Fragments.LoginPage">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/bg_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/banner_login_page1"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua_regular"
        android:text="@string/banner_login_page2"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:autofillHints="Ingresa tu email"
        android:ems="10"
        android:hint="@string/pista_cuadro_rellenar_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="286dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/texto_cuadro_solicitud_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:autofillHints="minimo 10 caracteres, letras simbolos y numeros"
        android:ems="10"
        android:hint="@string/ingresa_tu_contrasenia"
        android:inputType="textPassword"
        android:textColorHint="#A1887F"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua_regular"
        android:text="@string/contrase_a"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="326dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="#1A87DD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/signup_button"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua_regular"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/crear_nueva_cuenta"
        android:textColor="#63B7FB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>