<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_request_money"
    tools:context=".vista.fragments.RequestMoney">

    <ListView
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="Destinatario"
        app:layout_constraintBottom_toTopOf="@+id/textView46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />


    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:src="@drawable/request_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/rectangle2"
        app:layout_constraintBottom_toTopOf="@+id/imageView25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:src="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="119dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/ingresar_dinero"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="126dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pp4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/reem_khaled"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/reem_1993_gmail_com"
        android:textColor="#A2A2A2"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/cantidad_a_ingresa"
        app:layout_constraintBottom_toTopOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/notas_de_transferencia"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/agregar_notas_de_transferencia_opcional"
        android:textColor="#A2A2A2"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/_20_00"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rectangle3"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:elevation="2dp"
        android:fontFamily="@font/jua_regular"
        android:text="Ingresar Dinero"
        app:layout_constraintBottom_toBottomOf="@+id/imageView25"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView25"
        tools:ignore="HardcodedText,TextContrastCheck"
        tools:textColor="#FFFFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>